--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* 画面のスタイルシート */
 body {
-  font-family: Noto Sans JP,"sans-serif";
+  font-family: Noto Sans JP, "sans-serif";
   margin: 0;
   min-width: 1076px;
 }
@@ -17,7 +17,7 @@ body {
 .block-header {
   margin: 10px;
   padding: 0 20px 10px;
-  box-shadow: 0 10px 10px -5px rgba(204,204,204,0.3)
+  box-shadow: 0 10px 10px -5px rgba(204, 204, 204, 0.3);
 }
 
 .block-header a {
@@ -51,7 +51,7 @@ body {
   font-size: 15px;
   line-height: normal;
   text-align: left;
-  letter-spacing: 0.5px;
+
 }
 
 .icon-list {
@@ -122,7 +122,7 @@ body {
 }
 
 .works-list li a {
-  background-color: rgb(226,226,226);
+  background-color: rgb(226, 226, 226);
   padding: 5px 20px;
   margin-right: 10px;
   font-size: 15px;
@@ -136,5 +136,72 @@ body {
   text-align: center;
   font-size: 15px;
   margin: 15px 0 20px;
+}
 
+/* スマートフォンのスタイルシート */
+@media screen and (max-width: 767px) {
+  body {
+    min-width: 100%;
+  }
+
+  /* [header]のスタイルシート */
+  .block-header {
+    padding: 0 10px 10px;
+    box-shadow: 0 8px 8px -5px rgba(204, 204, 204, 0.3);
+  }
+
+  .block-header a {
+    font-size: 31px;
+  }
+
+  /* [main]のスタイルシート */
+  .block-main {
+    margin: 50px 0;
+  }
+
+  /*[profile]のスタイルシート */
+  .box-profile {
+    padding: 0 10px;
+  }
+  .item-list {
+    width: 100%;
+  }
+
+  .item-list b {
+    font-size: 18px;
+  }
+
+  .icon-list {
+    max-width: 100%;
+  }
+
+  .icon-list li {
+    margin-right: 25px;
+  }
+
+  /* [works]のスタイルシート */
+
+  .box-works {
+    margin: 60px 0 0;
+    padding: 0 10px;
+  }
+
+  .works-list {
+    max-width: 100%;
+  }
+
+  .works-list li {
+    max-width: 100%;
+    float: none;
+    margin-right: 0;
+  }
+
+  .works-list h3 {
+    font-size: 20px;
+    margin: 5px 0;
+  }
+
+  .works-list span {
+    font-size: 14px;
+  }
 }
